# python-project-base

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
